--- a/app/src/main/res/layout/game_screen.xml
+++ b/app/src/main/res/layout/game_screen.xml
@@ -6,10 +6,10 @@
     android:gravity="center_horizontal" >
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/game_screen_voice_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/imageButton2"
+        android:layout_alignBottom="@+id/game_screen_options_button"
         android:layout_alignParentStart="true"
         android:clickable="true"
         android:contentDescription="Activate Voice Command"
@@ -20,7 +20,7 @@
         android:onClick="onVoiceButtonClick" />
 
     <ImageButton
-        android:id="@+id/imageButton2"
+        android:id="@+id/game_screen_options_button"
         android:layout_width="wrap_content"
         android:layout_height="75dp"
         android:layout_alignParentEnd="true"
@@ -31,27 +31,28 @@
         android:src="@drawable/ic_settings_24dp"
         android:tint="#ffffff"
         android:onClick="onOptionsButtonClick"
-        android:nestedScrollingEnabled="false" />
+        android:nestedScrollingEnabled="false"
+        android:longClickable="false" />
 
     <Button
-        android:id="@+id/game_undo_button"
+        android:id="@+id/game_screen_undo_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/row1"
         android:layout_marginEnd="30dp"
         android:layout_marginTop="20dp"
-        android:layout_toStartOf="@+id/game_redo_button"
+        android:layout_toStartOf="@+id/game_screen_redo_button"
         android:contentDescription="Undo"
         android:text="&lt;"
         android:textSize="25sp" />
 
     <Button
-        android:id="@+id/game_redo_button"
+        android:id="@+id/game_screen_redo_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/game_undo_button"
-        android:layout_alignBottom="@+id/game_undo_button"
-        android:layout_alignEnd="@+id/imageButton2"
+        android:layout_alignBaseline="@+id/game_screen_undo_button"
+        android:layout_alignBottom="@+id/game_screen_undo_button"
+        android:layout_alignEnd="@+id/game_screen_options_button"
         android:contentDescription="Redo"
         android:text=">"
         android:textSize="25sp" />
@@ -60,7 +61,7 @@
         android:id="@+id/row8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/imageButton"
+        android:layout_below="@+id/game_screen_voice_button"
         android:layout_weight=".125"
         android:orientation="horizontal"
         >
