--- a/app/src/main/res/layout/fp_options.xml
+++ b/app/src/main/res/layout/fp_options.xml
@@ -5,7 +5,7 @@
     android:background="#000000">
 
     <ImageView
-        android:id="@+id/freeplay_logo_imageView"
+        android:id="@+id/logo_imageView"
         android:layout_width="fill_parent"
         android:layout_height="150dp"
         android:layout_alignParentLeft="true"
@@ -21,14 +21,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/freeplay_next_button"
-        android:layout_below="@id/freeplay_logo_imageView"
+        android:layout_below="@id/logo_imageView"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/freeplay_currentPlayer_textView"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/freeplay_logo_imageView"
+            android:layout_below="@+id/logo_imageView"
             android:contentDescription="Whose turn is it?"
             android:focusable="true"
             android:paddingBottom="10dp"
@@ -134,7 +134,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/freeplay_logo_imageView"
+            android:layout_below="@+id/logo_imageView"
             android:contentDescription="Select Computer Difficulty"
             android:focusable="true"
             android:paddingBottom="10dp"
